注释：闭环触发器会话认证工作流与工具入口